# Predict-Crypto-Price

./: .gitignore  LEARNING.md  README.md  app.py  learning.md  pyproject.toml  requirements.txt  setup.py  test.py  trainer.py  trainer.sh
predictcrypto/: exception.py
predictcrypto/component/: cmg.py  train.py
predictcrypto/pipeline/: data_pipeline.py  transformation_pipeline.py
predictcrypto/utils/: __init__.py  config_manager.py  datasource.py  exception.py  logger.py
scripts/: __init__.py  config.py  crypto.sql  data_loader.py  data_prep.sh  extract.py  load.py  transform.py
scripts/_config/: database.yaml  source.yaml
scripts/database/: crypto.sql  run_ingestrawdataintomain.sql
src/predictcrypto/: exception.py  logger.py
src/predictcrypto/component/: train.py
