[project]
name = "predictcrypto"
version = "0.0.1"
dependencies = ["scikit-learn", "pandas", "numpy", "prophet", "joblib", 
                "fire", "sqlalchemy", "streamlit"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ['logs', 'coins', 'config', 'predictcrypto', 'scripts']