[project]
name = "predictcrypto"
version = "0.0.2"
dependencies = ["scikit-learn", "pandas", "numpy", "prophet", "joblib", "pyodbc",
                "fire", "sqlalchemy", "streamlit", "requests", "pyyaml"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ['logs', 'coins', 'config', 'predictcrypto', 'scripts']